# Query-String-Manager

./: README.md  setup.cfg  setup.py
.github/workflows/: run-unittests.yaml
.github/workflows/scripts/: release.py
query_string_manager/: QueryStringManager.py
src/: QueryStringParser.py
src/QueryStringManager/: QueryStringManager.py
src/query_string_manager/: __init__.py
tests/: main.py
tests/decoders_tests/: test_external_parse_base64_query_strin.py  test_external_parse_base64_query_string.py  test_parse_base64_query_string.py  test_parse_query_string.py  test_unified_parse_query_string.py
tests/encoders_tests/: test_generate_base64_query_string.py  test_generate_query_string.py  test_generate_raw_query_string.py
tests/utilities_tests/: test_is_single_level_dict.py  test_is_valid_single_level_dict.py
tests/utilities_tests copy/: test_is_valid_single_level_dict.py
