[metadata]
name = Query-String-Manager
description = Simple Python utility to generate/parse URL query strings, either raw or in Base64 format
long_description_content_type = text/markdown
url = https://github.com/Topazoo/Query-String-Manager
project_urls =
    Bug Tracker = https://github.com/Topazoo/Query-String-Manager/issues
    Changelog = https://github.com/Topazoo/Query-String-Manager/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = query_string_manager
packages = find:
python_requires = >=3.6

[options.packages.find]
where = query_string_manager