[metadata]
name = Query-String-Manager
description = Simple Python utility to generate/parse URL query strings, either raw or in Base64 format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Topazoo/Query-String-Manager
project_urls =
    Bug Tracker = https://github.com/Topazoo/Query-String-Manager/issues
    Changelog = https://github.com/Topazoo/Query-String-Manager/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src